--- a/tw/tw-1.html
+++ b/tw/tw-1.html
@@ -1,11 +1,23 @@
-<section class="py-10 px-8 lg:px-64">
-  <h2 class="mb-2 text-4xl lg:text-6xl font-semibold tracking-tight">
-    Lorem ipsum dolor
-  </h2>
-  <p class="mb-4 text-base lg:text-lg">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
-  </p>
-  <p class="mb-4 text-base lg:text-lg">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-</section>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lorem Ipsum Example</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body class="bg-gray-50 text-gray-800">
+  <main class="py-10 px-6">
+    <section class="max-w-[75ch] mx-auto">
+      <h2 class="text-2xl font-semibold mb-3 text-center">Smaller Head</h2>
+      <p class="mb-4">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet lorem ac nisi faucibus posuere. Suspendisse potenti. Nulla facilisi. Aenean vitae neque vitae libero tristique hendrerit. Mauris aliquet enim sed ipsum interdum, sed euismod neque pulvinar.
+      </p>
+      <p class="mb-4">
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+      </p>
+    </section>
+  </main>
+</body>
+</html>
