--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Camargo | Web/UI Designer Portfolio</title>
     <meta name="description" content="Portfolio of Carlos Camargo, Web and UI Designer showcasing recent projects and design work.">
-    <link rel="preload" href="assets/img/pokemon.jpg" as="image">
+    <link rel="preload" href="assets/img/profile.jpg" as="image">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,7 +68,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('assets/img/pokemon.jpg') center/cover no-repeat;
+            background: url('assets/img/profile.jpg') center/cover no-repeat;
             opacity: 0.15;
             z-index: 0;
             filter: grayscale(30%) contrast(120%);
