--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,7 @@
 <header class="hero">
   <div class="hero__overlay">
     <div class="container hero__content">
-      <img src="crypto-wallet/assets/img/website-logo.png" alt="Snazzy logo" class="logo">
+      <img src="crypto-wallet/assets/img/crypto-wallet-hero-image.jpg" alt="Snazzy logo" class="logo">
       <h1>Snazzy Crypto Wallet</h1>
       <p class="hero-sub">Send, receive &amp; exchange 100+ cryptocurrencies with ease.</p>
       <p class="cta">
