--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carlos Camargo | Web/UI Designer Portfolio</title>
-    <meta name="description" content="Portfolio of Carlos Camargo, Web and UI Designer showcasing recent projects and design work.">
+    <title>Caio Medeiros | Web/UI Designer Portfolio</title>
+    <meta name="description" content="Portfolio of Caio Medeiros, Web and UI Designer showcasing recent projects and design work.">
     <link rel="preload" href="assets/img/profile.jpg" as="image">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -702,7 +702,7 @@
     <!-- Navigation -->
     <nav>
         <div class="container nav-container">
-            <a href="#" class="logo">Carlos Camargo</a>
+            <a href="#" class="logo">CM</a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -716,8 +716,8 @@
     <!-- Header/Hero Section -->
     <header id="home">
         <div class="container hero-content">
-            <img src="assets/img/profile.jpg" alt="Carlos Camargo" class="profile-img">
-            <h1>Hi, I'm Carlos Camargo</h1>
+            <img src="assets/img/profile.jpg" alt="Caio Medeiros" class="profile-img">
+            <h1>Hi, I'm Caio Medeiros</h1>
             <h2>Front End Developer</h2>
             <p class="tagline">I design and build modern, engaging web experiences that delight users and drive results.</p>
             <a href="#projects" class="btn">My Projects</a>
@@ -894,7 +894,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Carlos Camargo.</p>
+            <p>&copy; 2025 CM</p>
         </div>
     </footer>
 </body>
