--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('assets/img/profile.jpg') center/cover no-repeat;
+            /* use a subtle red overlay instead of the profile image */
+            background: #ff0000;
             opacity: 0.15;
             z-index: 0;
-            filter: grayscale(30%) contrast(120%);
         }
         
         .hero-content {
