--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             align-items: center;
         }
         
-        header::before {
+        /* header::before {
             content: '';
             position: absolute;
             top: 0;
@@ -72,7 +72,7 @@
             background: #ff0000;
             opacity: 0.15;
             z-index: 0;
-        }
+        } */
         
         .hero-content {
             position: relative;
