--- a/exercises/hero-video-project.html
+++ b/exercises/hero-video-project.html
@@ -36,7 +36,7 @@
                 <li>Animated headline and subheadline</li>
                 <li>Responsive and visually engaging</li>
             </ul>
-            <p><a href="../index.html" style="color:#6d28d9;">Back to Home page</a></p>
+            <p><a href="../index.html" style="color:#e11d48;">Back to Home page</a></p>
         </section>
     </main>
 </body>
