--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caio Medeiros | Web/UI Designer Portfolio</title>
     <meta name="description" content="Portfolio of Caio Medeiros, Web and UI Designer showcasing recent projects and design work.">
-    <link rel="preload" href="assets/img/profile.jpg" as="image">
+    <link rel="preload" href="lesson-images/ba525b014de1aa0f48da924575eb4d72.jpg" as="image">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -716,7 +716,7 @@
     <!-- Header/Hero Section -->
     <header id="home">
         <div class="container hero-content">
-            <img src="assets/img/profile.jpg" alt="Caio Medeiros" class="profile-img">
+            <img src="lesson-images/ba525b014de1aa0f48da924575eb4d72.jpg" alt="Caio Medeiros" class="profile-img">
             <h1>Hi, I'm Caio Medeiros</h1>
             <h2>Front End Developer</h2>
             <p class="tagline">I design and build modern, engaging web experiences that delight users and drive results.</p>
