--- a/tw/tw-4.html
+++ b/tw/tw-4.html
@@ -32,14 +32,14 @@
     </section>
 
     <!-- ====================== Stephen Curry ====================== -->
-    <section class="bg-blue-100 text-gray-900 p-6 rounded-lg shadow-sm flex flex-col justify-between">
+    <section class="bg-red-100 text-gray-900 p-6 rounded-lg shadow-sm flex flex-col justify-between">
       <div>
         <h2 class="font-sans font-semibold tracking-tight text-2xl mb-3">Stephen Curry</h2>
         <p class="font-serif text-sm leading-relaxed mb-4">
           Stephen Curry revolutionized basketball with his shooting. His influence reshaped offensive strategy, leading the Golden State Warriors to multiple titles and inspiring players around the world.
         </p>
       </div>
-      <a href="https://en.wikipedia.org/wiki/Stephen_Curry" class="inline-block bg-blue-500 text-white text-xs font-medium px-4 py-2 rounded hover:bg-blue-700 transition">
+      <a href="https://en.wikipedia.org/wiki/Stephen_Curry" class="inline-block bg-red-500 text-white text-xs font-medium px-4 py-2 rounded hover:bg-red-700 transition">
         Learn More
       </a>
     </section>
