--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
     <!-- Header/Hero Section -->
     <header id="home">
         <div class="container hero-content">
-            <img src="lesson-images/ba525b014de1aa0f48da924575eb4d72.jpg" alt="Caio Medeiros" class="profile-img">
+            <img src="assets/img/profile.jpg" alt="Caio Medeiros" class="profile-img">
             <h1>Hi, I'm Caio Medeiros</h1>
             <h2>Front End Developer</h2>
             <p class="tagline">I design and build modern, engaging web experiences that delight users and drive results.</p>
