--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
                         <div class="project-content">
                             <h3 class="project-title">Smoothies Website</h3>
                             <p>A vibrant e-commerce site for a smoothie company with product showcases and ordering functionality.</p>
-                            <a href="portfolio/smoothies/index.html" class="project-link">View Project →</a>
+                            <a href="smoothies/index.html" class="project-link">View Project →</a>
                         </div>
                     </div>
                     
