Add Store project card to index (replace A Tale of Two Cities)

--- a/index.html
+++ b/index.html
@@ -748,15 +748,15 @@
             <div class="container">
                 <h2 class="section-title">My Projects</h2>
                 <div class="projects-grid">
-                    <!-- Project 1 -->
+                    <!-- Project: Store -->
                     <div class="project-card">
                         <div class="project-img">
-                            <img src="exercises/assets/img/tale.jpg" alt="A Tale of Two Cities - Charles Dickens" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="store/assets/img/beautiful-web-design.png" alt="Store — curated books and resources" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">A Tale of Two Cities</h3>
-                            <p>A literary-themed website showcasing content from Charles Dickens' classic novel with elegant typography and layout.</p>
-                            <a href="exercises/page-1.html" class="project-link">View Project →</a>
+                            <h3 class="project-title">Store</h3>
+                            <p>A curated selection of books and resources to improve web design, development, and digital business skills.</p>
+                            <a href="store/assets/index.html" class="project-link">View Project →</a>
                         </div>
                     </div>
                     
