--- a/store/assets/index.html
+++ b/store/assets/index.html
@@ -58,8 +58,8 @@
 
     <!-- navbar start here -->
     <nav class="theme-dark"><div class="container-menu">
-        <a href="../index.html" class="brand">
-            <img src="assets\img\Orange_Logo_Luara_Froes_78337.png" alt="Sample website logo"></a>
+		<a href="../index.html" class="brand">
+			<img src="img/Orange_Logo_Luara_Froes_78337.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
@@ -95,7 +95,7 @@
 
 			<div class="col-4">
 				<figure>
-					<a href="https://www.amazon.co.uk/dp/1925836363"><img src="assets/img/beautiful-web-design.png"  alt="The Principles of Beautiful Web Design: Jason Beaird & Alex Walker"></a>
+					<a href="https://www.amazon.co.uk/dp/1925836363"><img src="img/beautiful-web-design.png"  alt="The Principles of Beautiful Web Design: Jason Beaird & Alex Walker"></a>
 				</figure>
 				<h3>The Principles of Beautiful Web Design</h3>
 				<p>Jason Beaird &amp; Alex Walker</p>
@@ -106,7 +106,7 @@ luarafroes-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas 
 			<div class="col-4">
 				<figure>
 					<a href="https://www.amazon.co.uk/dp/1849693188/ref=nosim?tag=	
-luarafroes-21"><img src="assets/img/responsive-web-design-frain.jpg" alt="Responsive Web Design with HTML5 and CSS3: Ben Frain"></a>
+luarafroes-21"><img src="img/responsive-web-design-frain.jpg" alt="Responsive Web Design with HTML5 and CSS3: Ben Frain"></a>
 				</figure>
 				<h3>Responsive Web Design with HTML5 and CSS3</h3>
 				<p>Ben Frain</p>
@@ -117,7 +117,7 @@ luarafroes-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas 
 			<div class="col-4">
 				<figure>
 					<a href="https://www.amazon.co.uk/dp/0648053709/ref=nosim?tag=	
-luarafroes-21"><img src="assets/img/complete-website-planning.png" alt="The Complete Website Planning Guide: Darryl King"></a>
+luarafroes-21"><img src="img/complete-website-planning.png" alt="The Complete Website Planning Guide: Darryl King"></a>
 				</figure>
 				<h3>The Complete Website Planning Guide</h3>
 				<p>Darryl King</p>
@@ -127,7 +127,7 @@ luarafroes-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas 
 
 			<div class="col-4">
 				<figure>
-					<a href="https://www.amazon.co.uk/dp/1706664680"><img src="assets/img/making-your-website-work.png" alt="Making Your Website Work: Gill Andrews"></a>
+					<a href="https://www.amazon.co.uk/dp/1706664680"><img src="img/making-your-website-work.png" alt="Making Your Website Work: Gill Andrews"></a>
 				</figure>
 				<h3>Making Your Website Work</h3>
 				<p>Gill Andrews</p>
