--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                         <div class="project-content">
                             <h3 class="project-title">Store</h3>
                             <p>A curated selection of books and resources to improve web design, development, and digital business skills.</p>
-                            <a href="store/assets/index.html" class="project-link">View Project →</a>
+                            <a href="store/index.html" class="project-link">View Project →</a>
                         </div>
                     </div>
                     
