--- a/store/index.html
+++ b/store/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://lunevedy.com/assets/2.0/css/lunevedy.min.css" />
     <link rel="stylesheet" href="../assets/css/custom.css" />
 
-	<!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
     <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">   
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
+    <link rel="manifest" href="assets/css/favicons/site.webmanifest">
 
 	<!-- Google Fonts -->
 
