Replace Purple Rain project with Fashion (link to /fashion/)

--- a/index.html
+++ b/index.html
@@ -760,15 +760,15 @@
                         </div>
                     </div>
                     
-                    <!-- Project 2 -->
+                    <!-- Project: Fashion -->
                     <div class="project-card">
                         <div class="project-img">
-                            <img src="exercises/assets/img/purple rain.jpg" alt="Purple Rain Project" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="fashion/assets/img/tee-shirts.jpg" alt="Fashion — clothing and accessories" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">Purple Rain</h3>
-                            <p>A vibrant music-themed website with dynamic color schemes and engaging visual elements.</p>
-                            <a href="exercises/page-2.html" class="project-link">View Project →</a>
+                            <h3 class="project-title">Fashion</h3>
+                            <p>A retail-style website showcasing clothing, hats, scarves and footwear.</p>
+                            <a href="fashion/index.html" class="project-link">View Project →</a>
                         </div>
                     </div>
                     
