--- a/index.html
+++ b/index.html
@@ -763,11 +763,11 @@
                     <!-- Project: Fashion -->
                     <div class="project-card">
                         <div class="project-img">
-                            <img src="fashion/assets/img/tee-shirts.jpg" alt="Fashion — clothing and accessories" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="fashion/assets/img/hat.jpg" alt="Fashion — hats, scarves and accessories" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
                             <h3 class="project-title">Fashion</h3>
-                            <p>A retail-style website showcasing clothing, hats, scarves and footwear.</p>
+                            <p>Retail-style website showcasing hats, scarves, t‑shirts and footwear — shop curated looks and accessories.</p>
                             <a href="fashion/index.html" class="project-link">View Project →</a>
                         </div>
                     </div>
