--- a/index.html
+++ b/index.html
@@ -775,12 +775,12 @@
                     <!-- Project 3 -->
                     <div class="project-card">
                         <div class="project-img">
-                            <img src="exercises/assets/img/Starry-Night-canvas-Vincent-van-Gogh-New-1889.webp" alt="Vincent Van Gogh Gallery" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="crypto-wallet/assets/img/crypto-wallet-hero-image.jpg" alt="Crypto Walled" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
                             <h3 class="project-title">Vincent Van Gogh</h3>
                             <p>An art gallery website featuring the works of Vincent Van Gogh with immersive visual experiences.</p>
-                            <a href="exercises/page-4.html" class="project-link">View Project →</a>
+                            <a href="crypto-wallet/index.html" class="project-link">View Project →</a>
                         </div>
                     </div>
                     
