--- a/portfolio/crypto-wallet/index.html
+++ b/portfolio/crypto-wallet/index.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="assets/css/custom.css" />
 
     <!-- Favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="..\assets\img\favicons\apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="..\assets\img\favicons\favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="..\assets\img\favicons\favicon-16x16.png">
-	<link rel="manifest" href="..\assets\img\favicons\site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="../../assets/img/favicons/site.webmanifest">
 
 	<!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,7 +59,7 @@ setTimeout(ldinsp, 0);
     
 
     <div class="container-media">
-        <img src="assets\img\crypto-wallet-hero-image.jpg" alt="Snazzy Crypto Wallet">
+        <img src="assets/img/crypto-wallet-hero-image.jpg" alt="Snazzy Crypto Wallet">
     </div>
 
     <div class="container-overlay"></div>
@@ -110,8 +110,8 @@ setTimeout(ldinsp, 0);
         </div>
 
         <div class="col-2 col-visual">
-            <figure>
-                <img src="assets\img\wallet.jpg" alt="Placeholder image">
+                <figure>
+                <img src="assets/img/wallet.jpg" alt="Placeholder image">
             </figure>
         </div>
 
@@ -131,7 +131,7 @@ setTimeout(ldinsp, 0);
 
         <div class="col-2 col-visual">
 				<figure>
-					<img src="assets\img\copy_trader.png" alt="Placeholder image">
+                    <img src="assets/img/copy_trader.png" alt="Placeholder image">
 				</figure>
             
         </div>
