--- a/portfolio/fashion/index.html
+++ b/portfolio/fashion/index.html
@@ -8,17 +8,17 @@
     <meta name="description" content="Sample web page description goes here.">
 
 	<!-- Preload large image -->
-     <link rel="preload" href="assets/videos/hero-still.jpg" as="image">  
+	<link rel="preload" href="assets/videos/hero-still.jpg" as="image">  
 
 	<!-- Stylesheets -->
     <link rel="stylesheet" href="https://lunevedy.com/assets/2.0/css/lunevedy.min.css" />
-    <link rel="stylesheet" href="assets/css/custom.css" />
+	<link rel="stylesheet" href="assets/css/custom.css" />
 
 	<!-- Favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="..\assets\img\favicons\apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="..\assets\img\favicons\favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="..\assets\img\favicons\favicon-16x16.png">
-	<link rel="manifest" href="..\assets\img\favicons\site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="../../assets/img/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../../assets/img/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../../assets/img/favicons/favicon-16x16.png">
+	<link rel="manifest" href="../../assets/img/favicons/site.webmanifest">
 
 	<!-- Google Fonts -->
 
@@ -60,8 +60,8 @@ setTimeout(ldinsp, 0);
 
     
 
-    <div class="container-media">
-			<video loop="" playsinline="" muted="" autoplay="" poster="assets\videos\hero-still.jpg" class="background-video" disablepictureinpicture="" preload="auto"><source src="assets\videos\hero-video.mp4" type="video/mp4"></video></div>
+	    <div class="container-media">
+		    <video loop playsinline muted autoplay poster="assets/videos/hero-still.jpg" class="background-video" disablepictureinpicture preload="auto"><source src="assets/videos/hero-video.mp4" type="video/mp4"></video></div>
 
     <div class="container-overlay"></div>
 
@@ -101,9 +101,9 @@ setTimeout(ldinsp, 0);
         <h2 id="hats">Hats</h2>
         <p>Shop our massive collection of fashion headwear, hats and caps. We are here to help you accessorise for every occasion. Add your logo or design to create your custom headwear.</p>
 
-        <figure>
-            <img src="assets\img\hat.jpg" alt="Placeholder image">
-        </figure>
+		<figure>
+			<img src="assets/img/hat.jpg" alt="Placeholder image">
+		</figure>
 
         <p>Embroidered caps are a popular choice for uniforms, workwear or fashion and are an excellent way to develop a distinctive look for your brand. Personalised caps and hats are also a great way to enhance your visibility at an event.</p>
 
@@ -121,9 +121,9 @@ setTimeout(ldinsp, 0);
         <h2 id="scarves">Scarves</h2>
         <p>Discover our beautiful range of scarves for all occasions in a wide variety of designs. Our carefully curated selection includes merino wool, cashmere blend, linen, and silk scarves.</p>
 
-        <figure>
-            <img src="assets\img\scarves.jpg" alt="Placeholder image">
-        </figure>
+		<figure>
+			<img src="assets/img/scarves.jpg" alt="Placeholder image">
+		</figure>
 
         <p>Whether you are looking for a printed scarf, a silk scarf or a knitted wrap for keeping warm on those cold winter nights, you will be sure to find something you love in our collection.</p>
 
@@ -140,9 +140,9 @@ setTimeout(ldinsp, 0);
         <h2 id="t-shirts">T-shirts</h2>
         <p>Be unique. Check out our vast collection of t-shirts ethically sourced from independent artists from around the globe. We offer the highest t-shirts on the Internet.</p>
 
-        <figure>
-            <img src="assets\img\tee-shirts.jpg" alt="Placeholder image">
-        </figure>
+		<figure>
+			<img src="assets/img/tee-shirts.jpg" alt="Placeholder image">
+		</figure>
 
         <p>Our order fulfilment team is obsessed with customer service. We have thousands of original designs across dozens of different product types – you are guaranteed to find something you love!</p>
 
@@ -161,9 +161,9 @@ setTimeout(ldinsp, 0);
         <h2 id="footwear">Footwear</h2>
         <p>Shop our fabulous selection of women’s footwear right here. Our range includes all the latest trends and brands in shoes, boots, heels, wedges, trainers, sandals, and more. We have them all. Refresh your shoe closet with a pair from our online shoe store.</p>
 
-        <figure>
-            <img src="assets\img\footwear.jpg" alt="Placeholder image">
-        </figure>
+		<figure>
+			<img src="assets/img/footwear.jpg" alt="Placeholder image">
+		</figure>
 
         <p>Whether you are after a pair of sleek sneakers, designer booties, or comfy sandals, our extensive collection of top brands will have you strutting with confidence!</p>
 
