--- a/portfolio/store/index.html
+++ b/portfolio/store/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="A selection of hand-picked quality books from Amazon to enhance your web design, web development, and digital business skills.">
 
 	<!-- Stylesheets -->
-    <link rel="stylesheet" href="https://lunevedy.com/assets/2.0/css/lunevedy.min.css" />
-    <link rel="stylesheet" href="../assets/css/custom.css" />
+	<link rel="stylesheet" href="https://lunevedy.com/assets/2.0/css/lunevedy.min.css" />
+	<link rel="stylesheet" href="../../assets/css/custom.css" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
-    <link rel="manifest" href="assets/css/favicons/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="../../assets/css/favicons/apple-touch-icon.png">    
+	<link rel="icon" type="image/png" sizes="32x32" href="../../assets/css/favicons/favicon-32x32.png">    
+	<link rel="icon" type="image/png" sizes="16x16" href="../../assets/css/favicons/favicon-16x16.png">    
+	<link rel="manifest" href="../../assets/css/favicons/site.webmanifest">
 
 	<!-- Google Fonts -->
 
@@ -57,17 +57,17 @@
 
     <!-- navbar start here -->
     <nav class="theme-dark"><div class="container-menu">
-        <a href="../index.html" class="brand">
+		<a href="../../index.html" class="brand">
             <!-- <img src="assets\img\Orange_Logo_Luara_Froes_78337.png" alt="Sample website logo"></a> -->
         
         <div class="container-menu-links">
         
         <div class="nav-toggle" id="nav-toggle-btn"><div class="bar-1"></div><div class="bar-2"></div><div class="bar-3"></div></div>
             <ul class="links-wrapper">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../portfolio/index.html">Portfolio</a></li>
-                <li><a href="#">Store</a></li>
-                <li><a class="btn btn-solid btn-soft" id="btn-cta" href="../contact/index.html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
+				<li><a href="../../index.html">Home</a></li>
+				<li><a href="../index.html">Portfolio</a></li>
+				<li><a href="#">Store</a></li>
+				<li><a class="btn btn-solid btn-soft" id="btn-cta" href="../../contact/index.html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
             </ul>
             </div>
         </div>
@@ -151,10 +151,10 @@ luarafroes-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas 
 		<h3>Front-end designer and developer student</h3>
 
 		<ul class="footer-links">
-			<li><a href="../index.html">Home</a></li>
-			<li><a href="../portfolio/index.html">Portfolio</a></li>
+			<li><a href="../../index.html">Home</a></li>
+			<li><a href="../index.html">Portfolio</a></li>
 			<li><a href="#">Store</a></li>
-            <li><a href="../contact/index.html">Contact</a></li>
+	            <li><a href="../../contact/index.html">Contact</a></li>
 		</ul>
 
 		<ul class="footer-icons">
@@ -162,7 +162,7 @@ luarafroes-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas 
 			<li><a href="https://github.com/Luarafroes" target="_blank"><i class="fab fa-github-square"></i></a></li>
 		</ul>
 
-		<p class="privacy"><a href="../privacy.html">Privacy &amp; Legal</a></p>
+		<p class="privacy"><a href="../../privacy.html">Privacy &amp; Legal</a></p>
 
 	</footer>
 
