--- a/portfolio/smoothies/index.html
+++ b/portfolio/smoothies/index.html
@@ -12,10 +12,10 @@
 
     <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
-    <link rel="manifest" href="assets/css/favicons/site.webmanifest">   
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/css/favicons/apple-touch-icon.png">    
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/css/favicons/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/css/favicons/favicon-16x16.png">    
+    <link rel="manifest" href="../../assets/css/favicons/site.webmanifest">   
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
