--- a/index.html
+++ b/index.html
@@ -811,12 +811,12 @@
                     <!-- Project 6 -->
                     <div class="project-card">
                         <div class="project-img">
-                            <img src="exercises/assets/img/laptopstopicpage-2048px-3685-2x1-1.webp" alt="Top Laptops 2024" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="portfolio/project-hero/assets/img/ui-designer.jpg" alt="Project Hero" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">Top Laptops 2024</h3>
-                            <p>An informative website reviewing the top-selling laptops of 2024 with detailed specifications and comparisons.</p>
-                            <a href="exercises/AI website.html" class="project-link">View Project →</a>
+                            <h3 class="project-title">Project Hero</h3>
+                            <p>A gallery of hero block elements with split-screen layouts and duotone images.</p>
+                            <a href="portfolio/project-hero/index-1.html" class="project-link">View Project →</a>
                         </div>
                     </div>
                 </div>
