--- a/exercises/page-4.html
+++ b/exercises/page-4.html
@@ -2,6 +2,12 @@
 <html lang="en">
     <!-- Carlos Camargo 76214 -->
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
+    <link rel="manifest" href="assets/css/favicons/site.webmanifest">
+    <style>
+    </style>
     <meta charset="UTF-8">
     <title>Carlos Camargo 76214</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,10 +24,6 @@
     <link rel="stylesheet" href="assets/css/style-4.css">
 
      <!--favicons-->
-<link rel="apple-touch-icon" sizes="180x180" href="../assets/css/favicons/apple-touch-icon.png">    
-<link rel="icon" type="image/png" sizes="32x32" href="../assets/css/favicons/favicon-32x32.png">    
-<link rel="icon" type="image/png" sizes="16x16" href="../assets/css/favicons/favicon-16x16.png">    
-<link rel="manifest" href="../assets/css/favicons/site.webmanifest">
 
 
 </head>
