--- a/exercises/hero-video-project.html
+++ b/exercises/hero-video-project.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <!-- Carlos Camargo 76214 -->
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
+    <link rel="manifest" href="assets/css/favicons/site.webmanifest">
+    <style>
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hero Video Project | Carlos Camargo</title>
     <meta name="description" content="Project page for the Hero Block with Video, showcasing a modern hero section with background video and overlay.">
     <link rel="stylesheet" href="assets/css/hero-video.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/css/favicons/apple-touch-icon.png">    
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/css/favicons/favicon-32x32.png">    
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/css/favicons/favicon-16x16.png">    
-    <link rel="manifest" href="../assets/css/favicons/site.webmanifest">
 </head>
 <body>
     <header>
