--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -39,10 +39,12 @@
 <h2>Recording</h2>
 <p>The song was recorded during a benefit concert for the Minnesota Dance Theatre at the First Avenue nightclub in Minneapolis on August 3, 1983. <i>City Pages</i> described the 70-minute performance as Prince's "sweatiest and most soulful hometown concert yet."</p>
 
-<h2>Reception and legacy</h2>
-<p>The song ranked number 144 on the Rolling Stone list of the 500 Greatest Songs of All Time. Q magazine placed it at number 40 in its list of the 100 Greatest Guitar Tracks, and Pitchfork named it the best song of the 1980s. The song is also included in The Rock and Roll Hall of Fame's 500 Songs that Shaped Rock and Roll.</p>
-
-<p><b>Source</b>: <i>Wikipedia</i>.</p>
+            <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
+            <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
+            <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
+            <link rel="manifest" href="assets/css/favicons/site.webmanifest">
+            <style>
+            </style>
 
 
 <p><a href="https://www.munnelly.com/dorset/lessons/assets/index.html">Back to Home page</a></p>
