--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
+    <link rel="manifest" href="assets/css/favicons/site.webmanifest">
+    <style>
+    </style>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caio Medeiros | Web/UI Designer Portfolio</title>
@@ -11,10 +17,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
-    <link rel="manifest" href="assets/css/favicons/site.webmanifest">
     <style>
         /* CSS Variables */
         :root {
@@ -787,12 +789,12 @@
                     <!-- Project 4 -->
                     <div class="project-card">
                         <div class="project-img">
-                            <img src="exercises/assets/img/cliffs-of-moher.jpg" alt="Irish Tourism" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="portfolio/project-multi column/assets/img/460x300-trans-couple-coffee.png" alt="Project Multi-column" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">Irish Tourism</h3>
+                            <h3 class="project-title">Multi-Column</h3>
                             <p>A tourism website showcasing the beauty of Ireland with stunning imagery and intuitive navigation.</p>
-                            <a href="exercises/page-5.html" class="project-link">View Project →</a>
+                            <a href="portfolio/project-multi column/index.html" class="project-link">View Project →</a>
                         </div>
                     </div>
                     
