--- a/portfolio/project-hero/index-5.html
+++ b/portfolio/project-hero/index-5.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
+	<link rel="manifest" href="assets/css/favicons/site.webmanifest">
+	<style>
+	</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +21,6 @@
     <link rel="stylesheet" href="assets/css/custom-5.css" />
 
 	<!-- Favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="..\assets\img\favicons\apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="..\assets\img\favicons\favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="..\assets\img\favicons\favicon-16x16.png">
-	<link rel="manifest" href="..\assets\img\favicons\site.webmanifest">
 
 	<!-- Google Fonts -->
 	 
