--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -2,7 +2,10 @@
 <!-- saved from url=(0063)https://www.munnelly.com/dorset/lessons/assets/downloads/page-2 -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!-- Carlos Camargo 76214 -->
-    
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
+    <link rel="manifest" href="assets/css/favicons/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purple Rain
         
