--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -4,10 +4,11 @@
     <!-- Carlos Camargo 76214 -->
 
 <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
-    <link rel="manifest" href="assets/css/favicons/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/css/favicons/apple-touch-icon.png">    
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/css/favicons/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/css/favicons/favicon-16x16.png">    
+    <link rel="manifest" href="../assets/css/favicons/site.webmanifest">
     <style>
     </style>
 <meta charset="UTF-8">
