Portfolio page created

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
     <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
     <link rel="icon" type="image/png" sizes="16x16" href="assets/css/favicons/favicon-16x16.png">    
@@ -811,14 +810,14 @@
                         </div>
                     </div>
                     
-                    <!-- Project 6 -->
+                    <!-- Project: Hero Blocks -->
                     <div class="project-card">
                         <div class="project-img">
-                            <img src="portfolio/project-hero/assets/img/ui-designer.jpg" alt="Project Hero" style="width: 100%; height: 100%; object-fit: cover;">
+                            <img src="portfolio/project-hero/assets/img/fashion.jpg" alt="Hero Blocks — split-screen layouts" style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">Project Hero</h3>
-                            <p>A gallery of hero block elements with split-screen layouts and duotone images.</p>
+                            <h3 class="project-title">Hero Blocks</h3>
+                            <p>Gallery of modern hero sections featuring split-screen layouts, duotone effects and bold typography.</p>
                             <a href="portfolio/project-hero/index-1.html" class="project-link">View Project →</a>
                         </div>
                     </div>
