--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
             <h1>Hi, I'm Caio Medeiros</h1>
             <h2>Front End Developer</h2>
             <p class="tagline">I design and build modern, engaging web experiences that delight users and drive results.</p>
-            <a href="#projects" class="btn">My Projects</a>
+            <a href="portfolio/index.html" class="btn">My Projects</a>
         </div>
     </header>
     
