--- a/portfolio/project-multi column/index.html
+++ b/portfolio/project-multi column/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
-    <title>Luara Froes | Portfolio Project | Multi-column layout gallery</title>
+    <title>Caio Medeiros | Portfolio Project | Multi-column layout gallery</title>
     <meta name="description" content="A gallery of responsive multi-column layouts">
 
 	<!-- Preload large image -->
@@ -27,7 +27,85 @@
      
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&family=Playfair+Display:wght@400;700&family=Saira+Condensed:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@200;400;700&family=Playfair+Display:wght@400;700&family=Saira+Condensed:wght@700&display=swap" rel="stylesheet">
+
+	<style>
+		/* Footer Styles */
+		footer {
+			background: #1a1a1a;
+			padding: 60px 20px 40px;
+			text-align: center;
+			border-top: 1px solid rgba(255,255,255,0.1);
+		}
+
+		footer h2 {
+			font-family: 'Space Grotesk', sans-serif;
+			font-size: 2rem;
+			margin-bottom: 12px;
+			background: linear-gradient(45deg, #ffffff, #e11d48);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+		}
+
+		footer h3 {
+			color: #a0aec0;
+			font-size: 1.1rem;
+			font-weight: 400;
+			margin-bottom: 32px;
+			font-family: 'Poppins', sans-serif;
+		}
+
+		.footer-links {
+			display: flex;
+			justify-content: center;
+			gap: 32px;
+			list-style: none;
+			margin-bottom: 24px;
+			flex-wrap: wrap;
+		}
+
+		.footer-links a {
+			color: #a0aec0;
+			text-decoration: none;
+			font-weight: 500;
+			transition: all 0.3s ease;
+			font-family: 'Poppins', sans-serif;
+		}
+
+		.footer-links a:hover {
+			color: #e11d48;
+		}
+
+		.footer-icons {
+			display: flex;
+			justify-content: center;
+			gap: 16px;
+			list-style: none;
+			margin-bottom: 24px;
+		}
+
+		.footer-icons a {
+			color: #a0aec0;
+			font-size: 1.8rem;
+			transition: all 0.3s ease;
+		}
+
+		.footer-icons a:hover {
+			color: #e11d48;
+			transform: translateY(-3px);
+		}
+
+		.privacy a {
+			color: #a0aec0;
+			text-decoration: none;
+			font-size: 0.9rem;
+			font-family: 'Poppins', sans-serif;
+		}
+
+		.privacy a:hover {
+			color: #e11d48;
+		}
+	</style>
 
 
     <!-- Line Awesome thin icons. Delete if not using. -->
@@ -286,6 +364,25 @@ setTimeout(ldinsp, 0);
 
 
     </main>
+
+    <!-- Footer -->
+    <footer>
+        <h2>Caio Medeiros</h2>
+        <h3>Front-end designer and developer student</h3>
+
+        <ul class="footer-links">
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../index.html">Portfolio</a></li>
+            <li><a href="../store/index.html">Store</a></li>
+        </ul>
+
+        <ul class="footer-icons">
+            <li><a href="https://www.linkedin.com/in/caio-medeiros-b801a9351/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/CaioMedeiros00" target="_blank"><i class="fab fa-github-square"></i></a></li>
+        </ul>
+
+        <p class="privacy"><a href="../../privacy.html">Privacy &amp; Legal</a></p>
+    </footer>
 
 </body>
 
