--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R41NFWDJZ6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-R41NFWDJZ6');
+    </script>
+    <!-- Begin Inspectlet Asynchronous Code -->
+    <script type="text/javascript">
+    (function() {
+    window.__insp = window.__insp || [];
+    __insp.push(['wid', 1825275241]);
+    var ldinsp = function(){
+    if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=1825275241&r=' + Math.floor(new Date().getTime()/3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
+    setTimeout(ldinsp, 0);
+    })();
+    </script>
+    <!-- End Inspectlet Asynchronous Code -->
     <meta charset="UTF-8">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/css/favicons/apple-touch-icon.png">    
     <link rel="icon" type="image/png" sizes="32x32" href="assets/css/favicons/favicon-32x32.png">    
@@ -746,9 +766,9 @@
     <!-- Navigation -->
     <nav>
         <div class="container nav-container">
-            <a href="#" class="logo">CM</a>
+            <a href="index.html" class="logo">CM</a>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html" class="active-page">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="portfolio/index.html" class="portfolio-btn">Portfolio</a></li>
