--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R41NFWDJZ6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-R41NFWDJZ6');
+    </script>
+    <!-- Begin Inspectlet Asynchronous Code -->
+    <script type="text/javascript">
+    (function() {
+    window.__insp = window.__insp || [];
+    __insp.push(['wid', 1825275241]);
+    var ldinsp = function(){
+    if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=1825275241&r=' + Math.floor(new Date().getTime()/3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
+    setTimeout(ldinsp, 0);
+    })();
+    </script>
+    <!-- End Inspectlet Asynchronous Code -->
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/css/favicons/apple-touch-icon.png">    
@@ -176,6 +196,11 @@
         }
         
         .portfolio-btn::after {
+            display: none;
+        }
+
+        /* Hide current page nav button */
+        .nav-links .active-page {
             display: none;
         }
         
@@ -425,8 +450,8 @@
             <a href="../index.html" class="logo">CM</a>
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="index.html" class="portfolio-btn">Portfolio</a></li>
+                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="index.html" class="portfolio-btn active-page">Portfolio</a></li>
             </ul>
         </div>
     </nav>
