Name and Student ID added

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="assets/css/favicons/site.webmanifest">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
+    <title>404 - Page Not Found | Caio Medeiros - 77281</title>
     <meta name="description" content="404 - Page not found">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
