--- a/exercises/hero-image.html
+++ b/exercises/hero-image.html
@@ -10,7 +10,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hero Image Block</title>
+    <title>Hero Image Block | Caio Medeiros - 77281</title>
     <meta name="description" content="A simple hero block with background image">
     <link rel="stylesheet" href="assets/css/hero-image.css">
 </head>
