--- a/exercises/page-5.html
+++ b/exercises/page-5.html
@@ -14,9 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
     <!--title and description-->
-  <title>Ireland's Top Five Visitor Attractions
-    Carlos Camargo 76214
-  </title>
+  <title>Ireland's Top Five Visitor Attractions | Caio Medeiros - 77281</title>
   <meta name="description" content="The country's most popular atractions for visitors, according to the Irish Tourist Board.">
     <!--fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
