--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caio Medeiros | Web/UI Designer Portfolio</title>
+    <title>Caio Medeiros - 77281 | Web/UI Designer Portfolio</title>
     <meta name="description" content="Portfolio of Caio Medeiros, Web and UI Designer showcasing recent projects and design work.">
     <link rel="preload" href="lesson-images/ba525b014de1aa0f48da924575eb4d72.jpg" as="image">
     <link rel="stylesheet" href="assets/css/global.css">
