--- a/tw/tw-2.html
+++ b/tw/tw-2.html
@@ -10,7 +10,7 @@
   </style>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tailwind Section Example</title>
+  <title>Tailwind Section Example | Caio Medeiros - 77281</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
