--- a/tw/tw-4.html
+++ b/tw/tw-4.html
@@ -12,7 +12,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Top Basketball Players of the Decade</title>
+  <title>Top Basketball Players of the Decade | Caio Medeiros - 77281</title>
   <meta name="description" content="Meet eight of the top basketball players of the decade — champions and icons who defined the NBA from 2015 to 2025 with talent, leadership, and unforgettable performances.">
 
   <!-- TailwindCSS CDN -->
