--- a/exercises/hero-text.html
+++ b/exercises/hero-text.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hero Block with Text</title>
+    <title>Hero Block with Text | Caio Medeiros - 77281</title>
     <meta name="description" content="An above-the-fold hero block with animated text and various background colours.">
 
     <link rel="stylesheet" href="assets/css/hero-text.css">
