--- a/exercises/hero-video-project.html
+++ b/exercises/hero-video-project.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hero Video Project | Carlos Camargo</title>
+    <title>Hero Video Project | Caio Medeiros - 77281</title>
     <meta name="description" content="Project page for the Hero Block with Video, showcasing a modern hero section with background video and overlay.">
     <link rel="stylesheet" href="assets/css/hero-video.css">
 </head>
