--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -8,12 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/css/favicons/favicon-16x16.png">    
     <link rel="manifest" href="../assets/css/favicons/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purple Rain
-        
-    </title>
-    <title>When Doves Cry
-        
-    </title>
+    <title>Purple Rain | Caio Medeiros - 77281</title>
     <meta name="description" content="A basic web page containing some text from Wikipedia about the 1983-recorded song Purple Rain by Prince">
     <link rel="stylesheet" href="assets/css/style-2.css">
 
