--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -13,9 +13,7 @@
     </style>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web Page with Sections
-   
-</title>
+<title>Web Page with Sections | Caio Medeiros - 77281</title>
 <meta name="description" content="A sample web page with multiple sections.">
 
 <link rel="stylesheet" href="assets/css/style-3.css">
