--- a/portfolio/crypto-wallet/index.html
+++ b/portfolio/crypto-wallet/index.html
@@ -22,7 +22,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caio Medeiros | Portfolio | Crypto Wallet </title>
+    <title>Caio Medeiros - 77281 | Portfolio | Crypto Wallet</title>
     <meta name="description" content="Sample web page description goes here.">
 
 	<!-- Preload large image -->
