--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,7 +29,7 @@
     <link rel="manifest" href="../assets/css/favicons/site.webmanifest">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caio Medeiros | Portfolio</title>
+    <title>Caio Medeiros - 77281 | Portfolio</title>
     <meta name="description" content="Portfolio of Caio Medeiros, showcasing web design and development projects.">
     <link rel="stylesheet" href="../assets/css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
