--- a/portfolio/smoothies/index.html
+++ b/portfolio/smoothies/index.html
@@ -22,7 +22,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smooth Smoothies</title>
+    <title>Smooth Smoothies | Caio Medeiros - 77281</title>
     <meta name="description" content="Dublin's finest smoothie store. Offering tasty alternatives to sugary and unhealthy snacks for busy, on-the-go, on-trend professionals.">
 
     <!-- Preload large image -->
