--- a/portfolio/store/index.html
+++ b/portfolio/store/index.html
@@ -20,7 +20,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store | Caio Medeiros </title>
+    <title>Store | Caio Medeiros - 77281</title>
     <meta name="description" content="A selection of hand-picked quality books from Amazon to enhance your web design, web development, and digital business skills.">
 
 	<!-- Google Fonts -->
